# llmuxer

./: Cargo.toml  README.md
.cargo/: audit.toml
llmux/: Cargo.toml  README.md
llmux-egui/: Cargo.toml  README.md
llmux-egui/src/: lib.rs
llmux-keystore/: Cargo.toml  README.md
llmux-keystore/src/: lib.rs  tests.rs
llmux/src/: config.rs  error.rs  lib.rs  traits.rs
llmux/src/providers/: anthropic.rs  gemini.rs  ollama.rs  openai.rs
llmux/src/tests/: config.rs  provider.rs  trait_defaults.rs
llmuxer/: CHANGELOG.md  Cargo.toml  Makefile  README.md
llmuxer-egui/: Cargo.toml  README.md
llmuxer-egui/src/: lib.rs
llmuxer-keystore/: Cargo.toml  README.md
llmuxer-keystore/src/: lib.rs  tests.rs
llmuxer/src/: attachment.rs  builder.rs  config.rs  lib.rs  lib_async.rs  lib_sync.rs  token_extraction.rs  token_usage.rs  traits.rs
llmuxer/src/async/: mod.rs  traits.rs
llmuxer/src/async/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
llmuxer/src/providers/: anthropic.rs  gemini.rs  llamacpp.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
llmuxer/src/shared/: cache_result.rs  mod.rs
llmuxer/src/sync/: traits.rs
llmuxer/src/sync/providers/: anthropic.rs  gemini.rs  ollama.rs  openai.rs
llmuxer/src/tests/: builder.rs  config.rs  provider.rs  trait_defaults.rs
