[workspace]
members  = ["llmuxer", "llmuxer-keystore", "llmuxer-egui"]
resolver = "3"

[workspace.package]
version    = "0.1.2"
edition    = "2024"
authors    = ["Przemysław Alexander Kamiński <exlee@users.noreply.github.com>"]
repository = "https://github.com/exlee/llmuxer"
license    = "MIT"

[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
reqwest      = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio        = { version = "1", features = ["full"] }
llmuxer        = { path = "llmuxer", version = "0.1.0" }
llmuxer-keystore = { path = "llmuxer-keystore", version = "0.1.0" }
