[package]
name        = "llmux-egui"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
repository.workspace = true
license.workspace    = true
description = "egui widget for configuring llmux providers at runtime"
keywords    = ["llm", "egui", "ai", "settings", "ui"]
categories  = ["gui"]
readme      = "README.md"

[dependencies]
llmux          = { workspace = true }
llmux-keystore = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
egui           = "0.33"
eframe         = "0.33"

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
mockito  = "1"
