[package]
name        = "llmuxer-keystore"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
repository.workspace = true
license.workspace    = true
description = "Credential persistence for llmuxer: stores one LlmConfig per provider in ~/.config/llmuxer/config.json"
keywords    = ["llm", "credentials", "keystore", "config"]
categories  = ["config"]
readme      = "README.md"

[dependencies]
llmuxer      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
dirs       = "5"
