[package]
name        = "llmuxer"
version = "0.2.0"
edition.workspace    = true
authors.workspace    = true
repository.workspace = true
license.workspace    = true
description = "Synchronous Rust client for Anthropic, Gemini, OpenAI, and Ollama with a unified trait interface"
keywords    = ["llm", "ai", "anthropic", "openai", "gemini"]
categories  = ["api-bindings"]
readme      = "README.md"
include = ["README.md", "CHANGELOG.md", "Cargo.toml", "src/**/*"]

[features]
default = []
async = ["dep:futures"]

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
reqwest     = { workspace = true }
base64      = "0.22"
futures     = { version = "0.3.32", optional = true }
